header, ikoonid, active nr.

--- a/footer.css
+++ b/footer.css
@@ -1,9 +1,9 @@
 
 .main-footer {
-	position: relative;
+	/*position: relative;*/
 	left:50%;
-	margin-left: -960px;
-	width: 1920px;
+	/*margin-left: -960px;
+	width: 1920px;*/
     height: 120px;
     padding-left: 300px;
 	padding-right: 300px;
@@ -20,26 +20,39 @@
 }
 
 .main-footer p {
+	text-align: center;
 	font-weight: normal;
 	position: relative;
-	display: block;
+	/*display: block;*/
 	font-size: 14px;
 }
 
+.main-footer p > a {
+	text-decoration: none;
+}
+.main-footer p > a.hover{
+	text-decoration: none;
+	color: black;
+}
 .main-footer > ul {
 	list-style-type: none;
+	padding: 0;
+	margin:0;
+	display: flex;
 }
 .main-footer > ul > li {
 	display: inline-block;
+	margin-left: 20px;
 }
 .main-footer > ul > li > a{
+
 	width: 24px;
 	height: 24px;
  	font-size: 0px;
 	display: block;
  	text-align: center;
  	text-decoration: none;
-	margin-left: 20px;
+
 }
 
 .fb {
