--- a/tabs.css
+++ b/tabs.css
@@ -1,4 +1,5 @@
-body {font-family: Arial;}
+* {font-family: 'Nunito', sans-serif;}
+
 
 .main-content{
   justify-content: center;
@@ -14,23 +15,27 @@ body {font-family: Arial;}
 
 /* Style the buttons inside the tab */
 .tab button {
+    height: 50px;
+    width: 50px;
+    background-position: center;
     background-color: inherit;
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 14px 16px;
+    padding: 16px 16px;
     transition: 0.3s;
     font-size: 17px;
 }
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-    background-color: #ddd;
+    font-weight: bold;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-    background-color: #ccc;
+    background-image: url("images/Circle.png");
+    background-repeat: no-repeat;
 }
 
 /* Style the tab content */
