--- a/style.css
+++ b/style.css
@@ -34,38 +34,35 @@ a:hover {
 	text-decoration: underline;
 }
 
+/*.wrapper {
+    max-width: 1400px;
+    margin: auto;
+    overflow: visible;
+}*/
+@media (max-width: 768px) {
+    .main-header__logo img {
+    	width: 100%;
+    	height: auto;
+    }
+}
+
 .front {
-	position: relative;
+	margin: auto;
+	/*position: relative;*/
 	width: 1920px;
     height: 540px;
+    /*overflow: visible;*/
 	background-image: url("images/main.jpg");
 }
 
-.main-header {
-	display: flex;
-	justify-content: center;
+@media (max-width: 768px) {
+    .front {
+    	display: block;
+    }
 }
 
-.main-header__logo {
-	margin-top: 105px;
-	margin-bottom: 110px;
-	margin-right: 364px;
-	margin-left: 364px;
-	/*background-image: url("images/LOGO1.png");
-	background-repeat: no-repeat;
-	width: 1000px;
-	height: 500px;
-	background-position: center;*/
-
-}
-
-.main-content {
-	display: flex;
-	justify-content: center;
-}
-
-.front h1{
-	position: absolute;
+.sr-only {
+    position: absolute;
     width: 1px;
     height: 1px;
     padding: 0;
@@ -76,15 +73,29 @@ a:hover {
     border: 0;
 }
 
+.main-header {
+	display: flex;
+	justify-content: center;
+}
+
+.main-content {
+	display: flex;
+
+}
+
 .front__nav {
-	margin-left: 216px;
+	max-width: 1400px;
+    margin: auto;
+	/*margin-left: 216px;
 	margin-right: 216px;
-	padding: 120px 84px 120px;
+	padding: 120px 84px 120px;*/
 	display: flex;
 	justify-content: space-between;
+
 }
 
 .front__nav a{
+	margin-top: 120px;
 	font-weight: normal;
 	position: relative;
 	display: flex;
@@ -97,7 +108,6 @@ a:hover {
 	justify-content: center;
 /*	transition: all 0.2s ease-in-out;*/
 }
-
 /*.front__nav a:hover {
     text-decoration: none;
     font-weight: bolder;
@@ -131,4 +141,4 @@ a:hover {
 	height: 300px;
 	clip-path: polygon(50% 8%, 78% 14%, 100% 29%, 100% 65%, 78% 88%, 24% 88%, 0 67%, 0 26%, 25% 0);
 }
-}
+
