--- a/header.css
+++ b/header.css
@@ -3,6 +3,9 @@
 * {font-family: 'Nunito', sans-serif;}
 
 .main-header {
+	background-image: url(images/header.png);
+	/*background-repeat: no-repeat;
+	overflow: visible;*/
     height: 120px;
     width: auto;
     font-size: 16px;
