--- a/paring.css
+++ b/paring.css
@@ -96,12 +96,36 @@ input[type=checkbox]:checked:after {
      left: 6px;
 }
 
-.resizedBox {
-    width: 100%;
-    height:30px;
+.form-group {
+    color: #343333;
+    font-size: 0.8rem;
+    margin: 10px;
+
 }
 
-.shortBox {
+.form-control {
+    display: block;
+    width: 100%;
+    height:30px;
+
+}
+
+.form-control-short {
+    display: block;
     width: 50%;
     height:30px;
+
+}
+
+select {
+   -webkit-appearance: button;
+   -webkit-border-radius: 2px;
+   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+   -webkit-padding-end: 20px;
+   -webkit-padding-start: 2px;
+   -webkit-user-select: none;
+   overflow: hidden;
+   padding: 5px 10px;
+   text-overflow: ellipsis;
+   white-space: nowrap;
 }
