--- a/footer.css
+++ b/footer.css
@@ -1,19 +1,15 @@
 
 
 .main-footer {
-	background-image: url(images/footer.png);
-	/*position: relative;*/
-	/*left:50%;*/
-	/*margin-left: -960px;
-	width: 1920px;*/
+   	bottom:0px;
+   	width: 100%;
     height: 120px;
-    /*padding-left: 300px;
-	padding-right: 300px;*/
 	max-width: 1400px;
     margin: auto;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+
 }
 
 @media (max-width: 768px) {
